--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
     "expo-auth-session": "^5.5.2",
-    "expo-notifications": "~0.28.18",
+    "expo-av": "~14.0.7",
+    "expo-calendar": "~13.0.5",
+    "expo-image-picker": "~15.0.7",
+    "expo-notifications": "^0.28.18",
     "expo-permissions": "^14.4.0",
     "expo-splash-screen": "^0.27.6",
     "expo-status-bar": "~1.12.1",
@@ -23,7 +27,9 @@
     "firebase": "^10.14.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1"
